Fix header z-index

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -4,6 +4,8 @@
 
   --icon-size: 1em;
   --icon-color: currentColor;
+
+  --z-header: 50;
 }
 
 html {
